admin: prevent action screen header from being overlapped by comboboxes

--- a/admin/src/components/routes/ActionWrapper/Action.css
+++ b/admin/src/components/routes/ActionWrapper/Action.css
@@ -21,7 +21,7 @@
     padding: 20px 40px;
     background-color: var(--bg-primary);
     border-bottom: 1px solid var(--border-primary);
-    z-index: 10;
+    z-index: 20;
     height: 90px;
 }
 
